Dark mode fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -245,9 +245,9 @@ input[type="search"]::-webkit-search-cancel-button {
 .btn {
   border: none;
   outline: none;
-  background-color: #fff;
   cursor: pointer;
   margin: 2px;
+  background-color: #fff;
   color: #777;
   font-size: 1.5rem;
 }
@@ -560,7 +560,21 @@ button[disabled]:hover {
   border-color: #555 transparent transparent transparent;
 }
 
-.btn:hover .tooltiptext {
+.md_btn {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin: 2px;
+  background-color: #fff;
+  color: #777;
+  font-size: 1.5rem;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  padding: 6px 12px;
+}
+
+.md_btn:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
 }
